--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,4 +54,61 @@ li{
 h1{
     font-size: 3em;
     padding-left: 10px;
+    position: absolute;
+    left: 35%;
+    top: 40%;
+}
+/*texto animado*/
+.container {
+    display: inline-flex;
+    left: 50%;
+    top: 50%;
+}
+.container .estatico{
+    color: rgb(34, 33, 33);
+    font-size: 60px;
+    font-weight: 400;
+}
+.container .dinamico{
+    margin-left: 15px;
+    line-height: 90px;
+    height: 90px;
+    overflow: hidden;
+}
+.dinamico li{
+    color: #fc6d6d;
+    list-style: none;
+    font-size: 60px;
+    font-weight: 500;
+    left: 0;
+    position: relative;
+    top: 0;
+    animation: slide 6s steps(4) infinite;
+}
+@keyframes slide{
+    100%{
+        top: -360px;
+    }
+}
+.dinamico li span{
+    position: relative;
+}
+.dinamico li span::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    border-left: 2px solid #fc6d6d;
+    animation: typing 1.5s steps(10) infinite;
+    background: #111111;
+}
+dinamico li span{
+    position: relative;
+}
+@keyframes typing{
+    100%{
+        left: 100%;
+        margin: 0 -35px 0 35px;
+    }
 }
