--- a/estilos/media.css
+++ b/estilos/media.css
@@ -1,2 +1,115 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+:root{
+    --cor01: rgb(50, 50, 56);
+    --cor02: rgb(1, 38, 80);
+    --cor03: rgb(75, 75, 75);
+    --cor04: rgb(194, 221, 213); 
+}
+
+@media screen and (max-width: 500px){
+
+    body, html{
+        background-image: url(../imagens/background.jpg);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;  
+    }
+    .vertical{
+        margin-left: 10px;
+        position: absolute;
+        font-size: 1.8em;
+        top: 25%;
+        list-style: none;
+    }
+    .horizontal{
+        position: absolute;
+        top: 50%;
+        left: 35%;
+        list-style: none;
+    }
+    .horizontal ul > li{
+        display: inline;
+        float: left;
+        font-size: 1.5em;
+    } 
+    li{
+        width: 42px;
+        height: 42px;
+        margin: 10px 10px;
+    }
+    .vertical ul > li{
+        background-color: rgb(228, 225, 225);
+        border-radius: 50%;
+    }
+    .coricon{
+        color: black;
+    }
+    .coricon1{
+        color: var(--cor02);
+    }
+    h1{
+        font-size: 2.7em;
+        padding-left: 10px;
+        position: absolute;
+        left: 35%;
+        top: 40%;
+    }
+}
+/*texto animado*/
+.container {
+    display: inline-flex;
+    left: 50%;
+    top: 50%;
+}
+.container .estatico{
+    color: rgb(34, 33, 33);
+    font-size: 60px;
+    font-weight: 400;
+}
+.container .dinamico{
+    margin-left: 15px;
+    line-height: 90px;
+    height: 90px;
+    overflow: hidden;
+}
+.dinamico li{
+    color: #fc6d6d;
+    list-style: none;
+    font-size: 60px;
+    font-weight: 500;
+    left: 0;
+    position: relative;
+    top: 0;
+    animation: slide 6s steps(4) infinite;
+}
+@keyframes slide{
+    100%{
+        top: -360px;
+    }
+}
+.dinamico li span{
+    position: relative;
+}
+.dinamico li span::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    border-left: 2px solid #fc6d6d;
+    animation: typing 1.5s steps(10) infinite;
+    background: #111111;
+}
+dinamico li span{
+    position: relative;
+}
+@keyframes typing{
+    100%{
+        left: 100%;
+        margin: 0 -35px 0 35px;
+    }
+}
