--- a/estilos/media.css
+++ b/estilos/media.css
@@ -9,7 +9,7 @@
     --cor04: rgb(194, 221, 213); 
 }
 
-@media screen and (max-width: 500px){
+@media screen and (min-width: 400px) and (max-width: 600px){
 
     body, html{
         background-image: url(../imagens/background.jpg);
