--- a/estilos/media.css
+++ b/estilos/media.css
@@ -3,12 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 :root{
-    --cor01: rgb(50, 50, 56);
-    --cor02: rgb(1, 38, 80);
+    --cor01: rgb(40, 40, 43);
+    --cor02: rgb(4, 36, 83);
     --cor03: rgb(75, 75, 75);
     --cor04: rgb(194, 221, 213); 
 }
-
 @media screen and (min-width: 400px) and (max-width: 600px){
 
     body, html {
@@ -46,7 +45,7 @@
         border-radius: 50%;
     }
     .coricon{
-        color: black;
+        color: rgb(40, 40, 43);
     }
     .coricon1{
         color: var(--cor02);
@@ -57,9 +56,10 @@
         position: absolute;
         left: 35%;
         top: 40%;
-        color: green;
+        color: rgb(4, 36, 83);
     }
 }
+
 /*texto animado*/
 .container {
     display: inline-flex;
