--- a/estilos/media.css
+++ b/estilos/media.css
@@ -10,8 +10,12 @@
 }
 @media screen and (min-width: 250px) and (max-width: 500px){
 
-    body, html {
+    html{
+        height: 10vh;
+    }
 
+    body{
+        background-image: url(../imagens/background.jpg);
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
