--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,7 +15,7 @@
 }
 
 body{
-    background-image: url(../imagens/background.jpg);
+    background-image: linear-gradient(90deg, rgb(207, 198, 198), rgb(78, 73, 73));
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
