--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,20 +15,23 @@
 }
 
 body{
-    background-image: linear-gradient(90deg, rgb(207, 198, 198), rgb(78, 73, 73));
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    display: flex;
-    align-items: center;  
+    background-image: linear-gradient(90deg, rgb(207, 198, 198), rgb(78, 73, 73));  
 }
 .vertical{
-    margin-left: 10px;
+    width: 40px;
+    height: 240px;
     position: absolute;
     font-size: 1.5em;
-    top: 25%;
+    top: 30%;
+    left: 5px;
     list-style: none;
+}
+.vertical ul{
+    padding: 10px;
+}
+.vertical ul > li > a{
+    margin: 0px;
+    padding: 0px;
 }
 .horizontal{
     position: absolute;
@@ -47,8 +50,8 @@ li{
     margin: 10px 10px;
 }
 li:hover{
-    width: 52px;
-    height: 52px;
+    width: 48px;
+    height: 48px;
     margin-left: 5px;
 }
 .vertical ul > li{
@@ -61,21 +64,6 @@ li:hover{
 }
 .vertical ul > li:hover{
     background: rgb(64, 64, 211);
-}
-.coricon{
-    color: var(--cor01);
-}
-.coricon1{
-    color: var(--cor03);
-    position: absolute;
-    left: 20%;
-    top: 8px;
-}
-.coricon1:hover{
-    color: white;
-    left: 15px;
-    top: 11px;
-   
 }
 h1{
     font-size: 3.5em;
