--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,7 +16,7 @@
 .vertical{
     position: absolute;
     top: 20%;
-    font-size: 1.7em;
+    font-size: 1.5em;
 }
 .vertical a{
     border-radius: 50%;
@@ -34,16 +34,10 @@
     width: 36px;
     height: 36px;
     background-color: rgb(57, 38, 226);
-    
 }
 .vertical a:hover{
     color: rgb(255, 255, 255);
-}
-#icon{
-    position: absolute;
-    left: 25px;
-    width: 30px;
-    height: 30px;
+    transition: all 1s;
 
 }
 
