--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,13 +6,22 @@
     --cor01: rgb(50, 50, 56);
     --cor02: rgb(11, 12, 11);
     --cor03: rgb(75, 75, 75);
-    --cor04: rgb(194, 221, 213); 
+    --cor04: rgb(194, 221, 213);
+    --cor05: rgb(48, 137, 240);
+    
+    --icon01: url(../imagens/linkedin-icon.png);
+    --icon01: url(../imagens/Instagram-Icon.png);
+    --icon01: url(../imagens/twitter-icon.png);
+    --icon01: url(../imagens/facebook-icon.png);
+    --icon01: url(../imagens/github-icon.png);
+    --icon01: url(../imagens/youtube-icon.png);
 }
 *{
     font-family: 'Poppins', sans-serif;;
     margin: 0px;
     padding: 0px;
 }
+/*menu vertical*/
 .vertical{
     position: absolute;
     top: 20%;
@@ -37,41 +46,29 @@
 }
 .vertical a:hover{
     color: rgb(255, 255, 255);
-    transition: all 1s;
-
 }
 
 
 /*menu horizontal*/
 .horizontal{
     position: absolute;
-    top: 57%;
-    left: 35%;
+    top: 60%;
+    left: 35.2%;
+    float: inline;
     list-style: none;
 }
-.horizontal ul > li{
-    display: inline;
-    float: left;
-    font-size: 1.4em;
-} 
-
-li:hover{
-    position: fixed;
-    width: 48px;
-    height: 48px;
-    margin-left: 5px;
+.horizontal a{
+    color: var(--cor02);
+    padding: 15px;
 }
-.vertical ul > li{
-    background-color: rgb(228, 225, 225);
+.horizontal > a:hover {
     border-radius: 50%;
-    display: block;
-    position: relative;
-    left: 20%;
-    top: 25%;
+    width: 36px;
+    height: 36px;
+    background-color: rgb(57, 38, 226);
+    transition: width 1s, height 1s;
 }
-.vertical ul > li:hover{
-    background: rgb(124, 124, 219);
-}
+
 h1{
     font-size: 3.5em;
     color: var(--cor03);
@@ -86,9 +83,11 @@ h2{
     left: 35.8%;
     top: 50%;
 }
+
+/*texto animado*/
 h3{
     font-size: 1.4em;
-    color: var(--cor03);
+    color: var(--cor05);
     width: 400px;
     position: absolute;
     left: 41.5%;
@@ -109,64 +108,4 @@ h3::after{
         opacity: 0;
     }    
 }
-/*texto animado*/
-/*.container{
-    display: inline-flex;
-    position: absolute;
-    width: 400px;
-    top: 50%;
-    left: 50%;
-}
-.estatico{
-    position: absolute;
-    width: 200px;
-    left: -20%;
-}
-.dinamico{
-    width: 400px;
-}
-.container .estatico {
-    color: var(--cor01);
-    font-size: 30px;
-    font-weight: 400;
-}
-.container .dinamico {
-    margin-left: 15px;
-    line-height: 90px;
-    height: 90px;
-    overflow: hidden;
-}
-.dinamico li{
-    color: var(--cor02);
-    list-style: none;
-    font-size: 30px;
-    position: relative;
-    top: 0;
-    left: 0;
-    animation: slide 4s steps(4) infinite;
-}
-@keyframes slide {
-    100%{
-        top: -360px;
-    }
-}
-.dinamico li span::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    border-right: 2px solid var(--cor02);
-    animation: typing 1.5s steps(5) infinite;
-    background-color: none;
-}
-.dinamico li span{
-    position: relative;
-}
-@keyframes typing{
-    100%{
-        right: 100%;
-        margin: 0 35px 0 -35px;
-    } 
-}*/
 
