--- a/estilos/style.css
+++ b/estilos/style.css
@@ -48,11 +48,19 @@
 .vertical a:hover{
     color: rgb(255, 255, 255);
 }
+#icon{
+    margin-top: 5px;
+    margin-left: 6px;
+    display: run-in;
+}
+#icon:hover{
+    position: center;
+}
 /*menu horizontal*/
 .horizontal{
     position: absolute;
     top: 60%;
-    left: 25%;
+    left: 30%;
     display: inline;
     list-style: none;
 }
@@ -64,13 +72,12 @@
     transition: width .5s, height .5s;
 }
 .horizontal a:hover{
-    border-radius: 50%;
-    border: 1px solid rgb(192, 190, 190);
-    transition: ;
- 
+    transform: translate(5px, 5px);
+    transition: transform 0.5s, border 1s;
 }
 .visual:hover{
-    visibility: hidden;
+    visibility: none;
+    opacity: 0;
 }
 .horizontal > #icon1:hover{
     background-image: url(../imagens/linkedin-icon.ico);
@@ -108,13 +115,13 @@
     background-size: 20px;
     background-repeat: no-repeat;
 }
+
 /*nome*/
 h1{
     font-size: 3.5em;
     color: var(--cor03);
-    padding-left: 10px;
     position: absolute;
-    left: 25%;
+    left: 31%;
     top: 35%;
 }
 
@@ -122,7 +129,7 @@ h1{
 h2{
     font-size: 1.4em;
     position: absolute;
-    left: 35.8%;
+    left: 32%;
     top: 50%; 
 }
 h3{
@@ -130,7 +137,7 @@ h3{
     color: var(--cor05);
     width: 400px;
     position: absolute;
-    left: 41.5%;
+    left: 38%;
     top: 50%;
 }
 h3::after{
